--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -16,18 +16,29 @@ body {
   display: flex;
 }
 
-main {
-  width: 100%;
-  display: flex;
-  box-shadow: 0 0 10 10 black;
-  height: 20vh;
-  border: gray 1px solid;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #51768C;
-  color: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
+
+
+
+
+
+
+
+
+
+
+
+// main {
+//   width: 100%;
+//   display: flex;
+//   box-shadow: 0 0 10 10 black;
+//   height: 20vh;
+//   border: gray 1px solid;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   background-color: #51768C;
+//   color: white;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+// }
