work on nesting in scss

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,16 +5,16 @@
 //   background-color: $primary-background;
 // }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Oxygen, sans-serif;
-  font-weight: 300;
-}
-body {
-  display: flex;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+//   font-family: Helvetica, sans-serif;
+//   font-weight: 300;
+// }
+// body {
+//   display: flex;
+// }
 
 
 
