--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -59,12 +59,18 @@ main {
 
 .main-score-cards {
   flex: 1;
+  width: 125px;
+  & h2 {
+    padding: 0px;
+    margin: 0px;
+  }
+
 }
 
 .main-letters {
   display: flex;
   justify-content: space-around;
-  margin-top: 50px;
+  margin-top: 20px;
   padding: 40px;
   & button {
     background-color: black;
@@ -123,6 +129,11 @@ main {
       padding: 15px;
     }
   }
+}
+
+.player-scorecard {
+  box-sizing: border-box;
+  padding: 7px;
 }
 
 .pre-game-form {
