--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -27,6 +27,7 @@ main {
 }
 
 .spin-value {
+  font-size: 36px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -192,19 +193,58 @@ main {
 .current-player {
   border: solid 2px #ffd700;
 }
-
-.spin {  
-  transition: 5s;
-  transform: rotate(360deg);
+.roll-in {
+  -webkit-animation: roll-in 0.6s ease-in-out both;
+	        animation: roll-in 0.6s ease-in-out both;
 }
 
+@-webkit-keyframes roll-in {
+  0% {
+    -webkit-transform: translateX(-1000px) rotate(-720deg);
+            transform: translateX(-1000px) rotate(-720deg);
+    -webkit-filter: blur(50px);
+            filter: blur(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+            transform: translateX(0) rotate(0deg);
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes swirl-in-fwd {
+  0% {
+    -webkit-transform: rotate(-540deg) scale(0);
+            transform: rotate(-540deg) scale(0);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) scale(1);
+            transform: rotate(0) scale(1);
+    opacity: 1;
+  }
+}
+@keyframes swirl-in-fwd {
+  0% {
+    -webkit-transform: rotate(-540deg) scale(0);
+            transform: rotate(-540deg) scale(0);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) scale(1);
+            transform: rotate(0) scale(1);
+    opacity: 1;
+  }
+}
 
+.guess-word-submit {
+  width: 100%;
+  height: 30px;
+  font-style: inherit;
+}
 
-
-
-
-
-
-
-
-
+#guess-word-letters {
+  color: white;
+}
