--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -29,8 +29,6 @@ main {
 .spin-value {
   font-size: 36px;
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
 }
 
@@ -119,6 +117,7 @@ main {
   & .puzzle-container {
     align-self: center;
     display: flex;
+    flex-wrap: wrap;
     justify-self: center;
     margin: auto;
     & .puzzle-letters {
