--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -7,8 +7,8 @@ main {
     flex: 1;
     width: 125px;
     & h2 {
-      padding: 0px;
       margin: 0px;
+      padding: 0px;
     }
   }
   & .player-scorecard {
@@ -22,9 +22,9 @@ main {
     padding: 40px;
     & button {
       background-color: black;
+      border: none;
       color: $white;
       font-size: 20px;
-      border: none;
       transition: all .2s ease-in-out;
     }
     & button:hover {
@@ -71,15 +71,15 @@ main {
     justify-self: center;
     margin: auto;
     & .puzzle-letters {
-      list-style: none;
+      align-items: center;
       background-color: $white;
       color: black;
-      margin: 5px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 40px;
       height: 40px;
+      justify-content: center;
+      list-style: none;
+      margin: 5px;
+      width: 40px;
     }
     & .puzzle-letters-black{
       background-color: black;
@@ -97,10 +97,10 @@ main {
   margin: auto;
   width: 500px;
     input {
-      width: 100%;
       border: none;
       height: 30px;
       margin: 10px 0;
+      width: 100%;
   }
     & button:disabled {
       background-color: 636363;
@@ -111,18 +111,18 @@ main {
     justify-content: space-between;
   
       button {
+        font-style: inherit;
         height: 30px;
         width: 150px;
-        font-style: inherit;
     }
   }
   & #guess-word-letters {
     color: $white;
   }
   & .guess-word-submit {
-    width: 100%;
-    height: 30px;
     font-style: inherit;
+    height: 30px;
+    width: 100%;
   }
 }
 
@@ -135,24 +135,13 @@ main {
 .death-star-container {
   display: flex;
   flex: 2.5;
-    &  #deathstar {
-      align-self: center;
-      animation: pulsate-fwd 4s ease-in-out infinite both;
-      border-radius: 50%;
-      box-shadow: 0px 0px 75px #ffffff77;
-      flex: 2;
-      width: 100%;
-    }
-    @keyframes pulsate-fwd {
-      0% {
-        transform: scale(1);
-    }
-      50% {
-        transform: scale(1.04);
-    }
-      100% {
-        transform: scale(1);
-    }
+  &  #deathstar {
+    align-self: center;
+    animation: pulsate-fwd 4s ease-in-out infinite both;
+    border-radius: 50%;
+    box-shadow: 0px 0px 75px $deathStarGlow;
+    flex: 2;
+    width: 100%;
   }
 }
 
